Added recipes for all Lockdown blocks/items
-Renamed "Drone Control Tower" and related references to "Control Tower"

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -1,6 +1,4 @@
 {
-  "item.lockdown.wireless_transmitter": "Redstone Wireless Transmitter",
-  "item.lockdown.wireless_receiver": "Redstone Wireless Receiver",
   "item.lockdown.alarm_light_red": "Red Alarm Light",
   "item.lockdown.alarm_light_orange": "Orange Alarm Light",
   "item.lockdown.alarm_light_yellow": "Yellow Alarm Light",
@@ -33,22 +31,50 @@
   "item.lockdown.big_button_light_blue": "Big Light Blue Button",
   "item.lockdown.big_button_brown": "Big Brown Button",
   "item.lockdown.big_button_white": "Big White Button",
+  "item.lockdown.keycard_red": "Red Keycard",
+  "item.lockdown.keycard_orange": "Orange Keycard",
+  "item.lockdown.keycard_yellow": "Yellow Keycard",
+  "item.lockdown.keycard_lime": "Lime Keycard",
+  "item.lockdown.keycard_green": "Green Keycard",
+  "item.lockdown.keycard_blue": "Blue Keycard",
+  "item.lockdown.keycard_gray": "Gray Keycard",
+  "item.lockdown.keycard_dark_gray": "Dark Gray Keycard",
+  "item.lockdown.keycard_magenta": "Magenta Keycard",
+  "item.lockdown.keycard_pink": "Pink Keycard",
+  "item.lockdown.keycard_purple": "Purple Keycard",
+  "item.lockdown.keycard_black": "Black Keycard",
+  "item.lockdown.keycard_cyan": "Cyan Keycard",
+  "item.lockdown.keycard_light_blue": "Light Blue Keycard",
+  "item.lockdown.keycard_brown": "Brown Keycard",
+  "item.lockdown.keycard_white": "White Keycard",
+  "item.lockdown.wireless_transmitter": "Wireless Transmitter",
+  "item.lockdown.wireless_receiver": "Wireless Receiver",
   "item.lockdown.force_field_projector": "Force Field Projector",
   "item.lockdown.klaxon": "Klaxon",
   "item.lockdown.laser_projector": "Laser Projector",
   "item.lockdown.player_detector": "Player Detector",
   "item.lockdown.mob_detector": "Mob Detector",
   "item.lockdown.turret": "Defense Turret",
+  "item.lockdown.turret.mob_hint": "Attacks Hostile Mobs",
   "item.lockdown.drone": "Defense Drone",
-  "item.lockdown.drone_tower": "Drone Control Tower",
+  "item.lockdown.control_tower": "Control Tower",
   "item.lockdown.encoding_station": "Encoding Station",
+  "item.lockdown.upgrade.control_tower": "Control Tower Upgrade",
+  "item.lockdown.upgrade.range": "Range Upgrade",
+  "item.lockdown.upgrade.durability": "Durability Upgrade",
+  "item.lockdown.upgrade.flamethrower": "Flamethrower Upgrade",
+  "item.lockdown.upgrade.control_tower.hint": "Binds target to a control tower",
+  "item.lockdown.upgrade.range.hint": "Increases firing range of the target",
+  "item.lockdown.upgrade.durability.hint": "Reinforces target armor",
+  "item.lockdown.upgrade.flamethrower.hint": "Installs a flamethrower on the target",
   "item.lockdown.upgrade.lore_header": "Applies To:",
   "item.lockdown.upgrade.lore_turret": "Turret",
   "item.lockdown.upgrade.lore_drone": "Drone",
-  "item.lockdown.range_upgrade": "Range Upgrade",
-  "item.lockdown.durability_upgrade": "Durability Upgrade",
-  "item.lockdown.flamethrower_upgrade": "Flamethrower Upgrade",
   "item.lockdown.laser_blaster": "Laser Blaster",
+  "item.lockdown.code.no_code": "No Code Assigned",
+  "item.lockdown.code.code": "Assigned",
+  "item.lockdown.no_channel.no_channel": "No Channel Assigned",
+  "item.lockdown.channel.channel": "Assigned",
   "subtitles.lockdown.alarm": "Alarm Wails",
   "subtitles.lockdown.turret.fire": "Turret Fires",
   "subtitles.lockdown.drone.target": "Drone Prepares to Obliterate its Target",
