Added new sound effects for drones

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -82,6 +82,11 @@
   "subtitles.lockdown.turret.fire": "Turret Fires",
   "subtitles.lockdown.drone.target": "Drone Prepares to Obliterate its Target",
   "subtitles.lockdown.drone.fire": "Drone Fires",
+  "subtitles.lockdown.drone.notice": "Drone Investigates",
+  "subtitles.lockdown.drone.identify.target": "Drone Prepares to Obliterate its Target",
+  "subtitles.lockdown.drone.identify.friendly": "Drone Stands Down",
+  "subtitles.lockdown.drone.scan": "Drone Scans",
+  "subtitles.lockdown.laser": "Laser Fires",
   "advancement.lockdown.root.title": "Lockdown",
   "advancement.lockdown.root.description": "Welcome to Lockdown, the datapack for all your security needs!",
   "advancement.lockdown.encoder.title": "Encoding Station",
