Added some static tests
* Added test that checks for missing translation keys
* Added test that checks for key mismatches between different language files
* Fixed missing translation key "item.lockdown.alarm_light_light_gray"
* Fixed missing translation key "item.lockdown.keycard_reader"

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.lockdown.alarm_light_blue": "Blue Alarm Light",
   "item.lockdown.alarm_light_gray": "Gray Alarm Light",
   "item.lockdown.alarm_light_dark_gray": "Dark Gray Alarm Light",
+  "item.lockdown.alarm_light_light_gray": "Light Gray Alarm Light",
   "item.lockdown.alarm_light_magenta": "Magenta Alarm Light",
   "item.lockdown.alarm_light_pink": "Pink Alarm Light",
   "item.lockdown.alarm_light_purple": "Purple Alarm Light",
@@ -47,6 +48,7 @@
   "item.lockdown.keycard_light_blue": "Light Blue Keycard",
   "item.lockdown.keycard_brown": "Brown Keycard",
   "item.lockdown.keycard_white": "White Keycard",
+  "item.lockdown.keycard_reader": "Keycard Reader",
   "item.lockdown.wireless_transmitter": "Wireless Transmitter",
   "item.lockdown.wireless_receiver": "Wireless Receiver",
   "item.lockdown.force_field_projector": "Force Field Projector",
