--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -24,6 +24,7 @@
   "item.lockdown.big_button_blue": "Big Blue Button",
   "item.lockdown.big_button_gray": "Big Gray Button",
   "item.lockdown.big_button_dark_gray": "Big Dark Gray Button",
+  "item.lockdown.big_button_light_gray": "Big Light Gray Button",
   "item.lockdown.big_button_magenta": "Big Magenta Button",
   "item.lockdown.big_button_pink": "Big Pink Button",
   "item.lockdown.big_button_purple": "Big Purple Button",
@@ -32,6 +33,7 @@
   "item.lockdown.big_button_light_blue": "Big Light Blue Button",
   "item.lockdown.big_button_brown": "Big Brown Button",
   "item.lockdown.big_button_white": "Big White Button",
+  "item.lockdown.keycard": "Keycard",
   "item.lockdown.keycard_red": "Red Keycard",
   "item.lockdown.keycard_orange": "Orange Keycard",
   "item.lockdown.keycard_yellow": "Yellow Keycard",
@@ -40,6 +42,7 @@
   "item.lockdown.keycard_blue": "Blue Keycard",
   "item.lockdown.keycard_gray": "Gray Keycard",
   "item.lockdown.keycard_dark_gray": "Dark Gray Keycard",
+  "item.lockdown.keycard_light_gray": "Light Gray Keycard",
   "item.lockdown.keycard_magenta": "Magenta Keycard",
   "item.lockdown.keycard_pink": "Pink Keycard",
   "item.lockdown.keycard_purple": "Purple Keycard",
