Added legacy wand item

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -83,6 +83,9 @@
   "item.lockdown.code_channel.code_channel": "Code/Channel Assigned",
   "item.lockdown.code_channel.no_code_channel": "No Code/Channel Assigned",
   "item.lockdown.key": "Key",
+  "item.lockdown.legacy_wand": "Legacy Wand",
+  "item.lockdown.legacy_wand.hint1": "Converts legacy machines/items",
+  "item.lockdown.legacy_wand.hint2": "into their post-R3 equivalent",
   "subtitles.lockdown.alarm": "Alarm Wails",
   "subtitles.lockdown.turret.fire": "Turret Fires",
   "subtitles.lockdown.drone.target": "Drone Prepares to Obliterate its Target",
