Added new sound effects for turrets and drones

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -92,7 +92,7 @@
   "subtitles.lockdown.drone.fire": "Drone Fires",
   "subtitles.lockdown.drone.notice": "Drone Investigates",
   "subtitles.lockdown.drone.identify.target": "Drone Prepares to Obliterate its Target",
-  "subtitles.lockdown.drone.identify.friendly": "Drone Stands Down",
+  "subtitles.lockdown.drone.confirm": "Drone Stands Down",
   "subtitles.lockdown.drone.scan": "Drone Scans",
   "subtitles.lockdown.laser": "Laser Fires",
   "advancement.lockdown.root.title": "Lockdown",
