--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -174,6 +174,5 @@
   "lockdown.info.header": "Lockdown Pack Information:",
   "lockdown.info.resource_pack": "Resource Pack: %s",
   "lockdown.info.resource_pack.enabled": "Enabled",
-  "lockdown.info.version": "Feature Release: %s",
-  "lockdown.info.version_number": "Version Number: %s"
+  "lockdown.info.version": "Feature Release: %s"
 }
