Fixes to advancements
-Removed advancements for control tower and control tower upgrade
-Updated descriptions for several advancements

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -102,7 +102,7 @@
   "advancement.lockdown.angry_drone.title": "Robot Uprising",
   "advancement.lockdown.angry_drone.description": "Be attacked by a drone!",
   "advancement.lockdown.big_buttons.title": "End-of-The-World Button",
-  "advancement.lockdown.big_buttons.description": "Craft a wireless big button.  Outputs a wireless signal when powered.",
+  "advancement.lockdown.big_buttons.description": "Craft a big button",
   "advancement.lockdown.blacklight.title": "This is Beyond Science",
   "advancement.lockdown.blacklight.description": "That's not how blacklights work",
   "advancement.lockdown.drone.title": "Our Robot Overlords",
@@ -112,17 +112,17 @@
   "advancement.lockdown.control_tower_upgrade.title": "We Copy, Over",
   "advancement.lockdown.control_tower_upgrade.description": "Use a drone control tower upgrade on a drone so it can receive commands from a tower.",
   "advancement.lockdown.durability_upgrade.title": "Durability Upgrade",
-  "advancement.lockdown.durability_upgrade.description": "Increase the durability of a drone or turret by throwing a durability upgrade at it.",
+  "advancement.lockdown.durability_upgrade.description": "Increase the durability of a drone or turret by using a durability upgrade on it.",
   "advancement.lockdown.flamethrower_upgrade.title": "Flamethrower Upgrade",
-  "advancement.lockdown.flamethrower_upgrade.description": "Supercharge a drone/turret's laser to set targets on fire by throwing a flamethrower upgrade at it.",
+  "advancement.lockdown.flamethrower_upgrade.description": "Turn up the heat on a drone/turret's laser by using a flamethrower upgrade on it.",
   "advancement.lockdown.range_upgrade.title": "Range Upgrade",
-  "advancement.lockdown.range_upgrade.description": "Increase the range of a drone or turret by throwing a range upgrade at it.",
+  "advancement.lockdown.range_upgrade.description": "Increase the range of a drone or turret by using a range upgrade on it.",
   "advancement.lockdown.force_field_projector.title": "Force Field Projector",
   "advancement.lockdown.force_field_projector.description": "The force field projector generates an indestructible force field.  Right-click the block to adjust the field size.",
   "advancement.lockdown.keycard.title": "Access Granted",
   "advancement.lockdown.keycard.description": "A keycard will trigger all keycard readers within five blocks that have the same code.",
   "advancement.lockdown.keycard_reader.title": "Keycard Reader",
-  "advancement.lockdown.keycard_reader.description": "Craft a wireless keycard reader.  Outputs a wireless signal when powered.",
+  "advancement.lockdown.keycard_reader.description": "Craft a keycard reader.  Outputs a redstone signal when powered.",
   "advancement.lockdown.klaxon.title": "AWOOGAA!",
   "advancement.lockdown.klaxon.description": "When powered, the klaxon will audibly remind you of the impending disaster.",
   "advancement.lockdown.laser_projector.title": "Not The Sun",
