More version testing
-Datapack now disables itself if loaded in versions <= 1.21.4,
due to so many things breaking.
-Apparently overlays were introduced in 1.20.2, so the 1.20.1
version definitely isn't making it into the support table.

--- a/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
+++ b/src/Resource-Pack/Lockdown/assets/minecraft/lang/en_us.json
@@ -151,7 +151,8 @@
   "lockdown.messages.welcome": "Welcome to %1$s—the datapack for all your security needs!  Open your advancements with '%2$s' for a roadmap ahead.",
   "lockdown.messages.welcome.hidden": "",
   "lockdown.messages.welcome.version": "Lockdown is running on version: %1$s",
-  "lockdown.messages.welcome.incompatible_game_version": "Warning: you are playing on a game version that has not been tested with Lockdown.  You may experience bugs!",
+  "lockdown.messages.welcome.incompatible_game_version": "Error: this game version is incompatible with the Lockdown datapack.  Lockdown has automatically disabled itself",
+  "lockdown.messages.welcome.untested_game_version": "Warning: you are playing on a game version that has not been tested with Lockdown.  You may experience bugs!",
   "lockdown.messages.legacy_detected": "A legacy version of Lockdown was previously installed on your world.  Use the legacy wand to convert old blocks/items.  %1$s to hide this message.",
   "lockdown.messages.legacy_detected.click_here": "Click here",
   "lockdown.messages.encoder.error.no_item": "No item was provided for encoding",
